<resources>
    <string name="app_name">Tugas Bundle Serializable Parcelable</string>
    <string name="name_after_progress">Name After Progress</string>
    <string name="age_after_progress">Age After Progress</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="masukan_tahun_lahir">Masukan Tahun Lahir</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="input_name">Input Name</string>
</resources>